home page layout change

--- a/layouts/globalStyle.scss
+++ b/layouts/globalStyle.scss
@@ -1,9 +1,11 @@
 span, h1, h2, h3, h4, h5, h6, p, div {
   font-family: "Roboto", sans-serif;
+  color: #131313;
 }
 body {
   padding: 0;
   margin: 0;
-  height: 100vh;
-  width: 100vw;
+  height: 100%;
+  width: 100%;
 }
+
