--- a/components/Home/style.scss
+++ b/components/Home/style.scss
@@ -1,10 +1,15 @@
 @import "variables";
+@import "../../layouts/mixins";
+
 .container {
-  height: 100%;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
+  height: 100%;
+  width: 100%;
+  margin: 15px auto;
+  @include on-tablet {
+    margin: 10px 15px;
+  }
 }
 
 .thumbnail {
@@ -14,16 +19,39 @@
 
 .searchResult {
   display: flex;
+  justify-content: center;
 }
 
 .resultsContainer {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax($search-width, 1fr));
+  justify-content: center;
+  grid-template-columns: repeat(auto-fill, $search-width);
   grid-gap: 1rem;
-  margin: 10px;
   width: 100%;
+  margin: 0;
+}
+
+.noSearch {
+  grid-template-columns: 1fr;
+}
+
+.searchPrompt {
+  display: flex;
+  flex-direction: column;
+  margin: 0 auto;
+  padding: 0 10px;
 }
 
 .searchBar {
-  margin: 10px 0;
+  width: 80%;
+  margin: 20px auto;
+}
+
+.hifumiImage {
+  margin: 0 auto;
+}
+
+.title {
+  padding: 15px;
+  text-align: center;
 }
