--- a/components/Tierlist/_variables.scss
+++ b/components/Tierlist/_variables.scss
@@ -6,6 +6,6 @@ $tiers: (
   tier-d: #ef7a85,
   tier-f: #e85f5c
 );
-
+$tier-height: 120px;
 $character-width-sm: 75px;
 $character-width-lg: 105px;
