--- a/components/Tierlist/style.scss
+++ b/components/Tierlist/style.scss
@@ -1,4 +1,6 @@
 @import "variables";
+@import "../../layouts/mixins";
+
 .container {
   display: flex;
   flex-direction: column;
@@ -12,7 +14,10 @@
 }
 
 .unranked {
-  min-height: $tier-height;
+  min-height: $tier-height-sm;
+  @include on-tablet {
+    min-height: $tier-height-lg;
+  }
   height: 60%;
   overflow-y: auto;
 }
