basic save screen

--- a/layouts/globalStyle.scss
+++ b/layouts/globalStyle.scss
@@ -1,5 +1,5 @@
 span, h1, h2, h3, h4, h5, h6, p, div {
-  font-family: "Roboto", sans-serif;
+  font-family: "Lato", "Roboto", sans-serif;
 }
 body {
   padding: 0;
