--- a/components/Tierlist/CharacterHolder/style.scss
+++ b/components/Tierlist/CharacterHolder/style.scss
@@ -27,30 +27,18 @@
   overflow-x: auto !important;
 }
 
-.swipeSection {
-  @include before-tablet {
-    &:before {
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      height: 50px;
-      flex-direction: column;
-      font-size: 12px;
-      color: #3c3c3c;
-      font-weight: lighter;
-      content: "Swipe here to scroll"
-    }
-  }
-}
-
 .tierCharacters {
-  display: flex;
-  height: $tier-height-sm;
+  position: relative;
+  //display: flex;
+  min-height: $tier-height-sm;
+  max-height: $tier-height-sm;
+  width: 90%;
   @include on-tablet {
+    width: 100%;
+    min-height: $tier-height-lg;
     display: grid;
     height: 100%;
     width: 100%;
-    grid-template-columns: repeat(auto-fit, $character-width-lg);
   }
 }
 
