--- a/components/Home/style.scss
+++ b/components/Home/style.scss
@@ -9,10 +9,6 @@
   flex-direction: column;
   height: 100%;
   width: 100%;
-  margin: 15px auto;
-  @include on-tablet {
-    margin: 10px 15px;
-  }
 }
 
 .thumbnail {
@@ -31,7 +27,7 @@
   grid-template-columns: repeat(auto-fill, $search-width);
   grid-gap: 1rem;
   width: 100%;
-  margin: 0;
+  margin: 10px 0;
 }
 
 .noSearch {
@@ -45,9 +41,13 @@
   padding: 0 10px;
 }
 
-.searchBar {
-  width: 80%;
-  margin: 20px auto;
+
+.overlay {
+  position: absolute;
+  top: 0;
+  background: rgba(0, 0, 0, 0.2);
+  width: 100%;
+  height: 100%;
 }
 
 .hifumiImage {
@@ -55,6 +55,33 @@
 }
 
 .title {
+  color: whitesmoke;
+  z-index: 3;
   padding: 15px;
   text-align: center;
+  font-size: 26px !important;
+}
+
+.top {
+  min-height: 100%;
+  position: relative;
+  width: 100%;
+}
+
+.banner {
+  z-index: 0;
+  top: 0;
+  max-width: 100%;
+  max-height: 50vh;
+}
+
+.topContent {
+  position: absolute;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex: 1;
+  flex-direction: column;
+  justify-content: space-between;
 }
