--- a/components/Home/style.scss
+++ b/components/Home/style.scss
@@ -1,5 +1,14 @@
-@import "variables";
+@import "../../layouts/variables";
 @import "../../layouts/mixins";
+
+@mixin top-height {
+  height: 40vh;
+  min-height: 200px;
+  max-height: 570px;
+  @media (min-width: 900px) {
+    background-position: 0 45%;
+  }
+}
 
 .container {
   a {
@@ -21,15 +30,6 @@
   justify-content: center;
 }
 
-.resultsContainer {
-  display: grid;
-  justify-content: center;
-  grid-template-columns: repeat(auto-fill, $search-width);
-  grid-gap: 1rem;
-  width: 100%;
-  margin: 10px 0;
-}
-
 .noSearch {
   grid-template-columns: 1fr;
 }
@@ -41,38 +41,53 @@
   padding: 0 10px;
 }
 
-
-.overlay {
-  position: absolute;
+$gradient: linear-gradient(
+  180deg,
+  rgba(171, 154, 154, 0.3) 0%,
+  rgba(0, 0, 0, 0.3) 100%
+);
+.banner {
+  @include top-height;
+  background-position: center;
+  margin: 0 auto;
+  background-size: cover;
+  background-image: $gradient, url(/static/waifu.jpg);
+  @media (min-width: 900px) {
+    background-image: $gradient, url(/static/waifu_large.jpg);
+    max-width: 1920px;
+  }
   top: 0;
-  background: rgba(0, 0, 0, 0.2);
+  position: absolute;
   width: 100%;
-  height: 100%;
 }
 
 .hifumiImage {
   margin: 0 auto;
 }
 
-.title {
-  color: whitesmoke;
+$content-padding: 20px;
+.content {
   z-index: 3;
-  padding: 15px;
-  text-align: center;
-  font-size: 26px !important;
+  margin-top: -22px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 0 $content-padding;
+  @include on-tablet {
+    padding: 0 20px;
+  }
+  @include on-desktop {
+    padding: 0 15%;
+  }
 }
 
 .top {
-  min-height: 100%;
+  @include top-height;
+  display: flex;
+  justify-content: center;
   position: relative;
   width: 100%;
-}
-
-.banner {
-  z-index: 0;
-  top: 0;
-  max-width: 100%;
-  max-height: 50vh;
 }
 
 .topContent {
@@ -83,5 +98,52 @@
   display: flex;
   flex: 1;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: space-evenly;
+}
+
+.github {
+  z-index: 3;
+}
+
+.divider {
+  margin: 15px 0;
+}
+
+.customButton {
+  font-weight: 400 !important;
+  width: 100%;
+  height: 44px;
+  //background: #ffffff !important;
+}
+
+.noResultContainer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.noResults {
+  width: 100%;
+  @include on-tablet {
+    width: 60%;
+  }
+}
+
+.gridResult {
+  display: grid;
+  justify-content: center;
+  grid-template-columns: repeat(auto-fill, $search-width);
+  grid-gap: 0.7rem;
+  width: 100%;
+  margin: 10px 0;
+}
+
+.disclaimer {
+  margin-top: 10px;
+  text-align: left;
+  width: 100%;
+}
+
+.searchCover {
+  height: 100%;
 }
